# TelegramBotAPICXX

./: .gitmodules  CMakeLists.txt
include/: BotWrapper.hxx  Logger.hxx
include/events/: EventsBroadcast.hxx
include/net/: CURLInteraction.hxx  LongPoll.hxx  MakeType.hxx  MakeType.hxx.autosave  ParseResponce.hxx  ParseResponse.hxx
include/types/: Birthdate.hxx  BusinessIntro.hxx  BusinessLocation.hxx  BusinessOpeningHours.hxx  BusinessOpeningHoursInterval.hxx  CallbackQuery.hxx  Chat.hxx  ChatFullInfo.hxx  ChatLocation.hxx  ChatPermissions.hxx  ChatPhoto.hxx  File.hxx  GenericMarkup.hxx  GenericReactionType.hxx  InlineKeyboardButton.hxx  InlineKeyboardMarkup.hxx  Location.hxx  Message.hxx  ReactionTypeEmoji.hxx  ReplyParameters.hxx  User.hxx
src/events/: OnAnyMessage.cxx  OnCallbackQuery.cxx  OnCommandMessage.cxx  OnEditedMessage.cxx  ProcessUpdate.cxx
src/methods/: EditMessageText.cxx  GetChat.cxx  GetUpdates.cxx  SendMessage.cxx
src/net/: CURLInteraction.cxx  LongPollStart.cxx  MakeInlineKeyboardMarkup.cxx  MakeReplyParameters.cxx  ParseBirthdate.cxx  ParseCallbackQuery.cxx  ParseChat.cxx  ParseChatFullInfo.cxx  ParseMessage.cxx  ParseUser.cxx
